fix: use `text-align: left` instead of `text-align: initial;`.

--- a/src/sass/pages/dev-support.scss
+++ b/src/sass/pages/dev-support.scss
@@ -162,7 +162,7 @@ body.dev-support {
 
             .left {
                 width: 50%;
-                text-align: initial;
+                text-align: left;
                 margin-top: 6%;
 
                 button {
